# shiny-bear

./: Makefile  README.md  autogen.sh  configure.ac
src/: Makefile  main.c
